Refactor insurance regression and MNIST dataset notebooks for clarity and consistency: - Update variable names for clarity (e.g., from `X_train_full` to `X_train`). - Adjust execution counts for code cells to maintain sequential order. - Normalize pixel values in MNIST dataset and combine training and test data correctly.

--- a/HIS/insurance_regression.ipynb
+++ b/HIS/insurance_regression.ipynb
@@ -28,7 +28,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 23,
+            "execution_count": 1,
             "id": "d8de3b1f",
             "metadata": {},
             "outputs": [],
@@ -58,7 +58,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 24,
+            "execution_count": 2,
             "id": "ba4c1d1a",
             "metadata": {},
             "outputs": [
@@ -163,7 +163,7 @@
                             "4   32    male  28.880         0     no  northwest   3866.85520"
                         ]
                     },
-                    "execution_count": 24,
+                    "execution_count": 2,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -176,7 +176,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 25,
+            "execution_count": 3,
             "id": "11bfcd40",
             "metadata": {},
             "outputs": [
@@ -225,7 +225,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 26,
+            "execution_count": 4,
             "id": "74ea98b1",
             "metadata": {},
             "outputs": [
@@ -243,29 +243,29 @@
                 "\n",
                 "# One-Hot Encoding for categorical variables\n",
                 "# drop_first=True helps avoid multicollinearity (dummy variable trap)\n",
-                "df_all = pd.get_dummies(df, columns=['sex', 'smoker', 'region'], drop_first=True, dtype=int)\n",
+                "df = pd.get_dummies(df, columns=['sex', 'smoker', 'region'], drop_first=True, dtype=int)\n",
                 "\n",
                 "print(\"Columns after encoding:\")\n",
-                "print(df_all.columns.tolist())\n",
+                "print(df.columns.tolist())\n",
                 "\n",
                 "# Define X (Features) and y (Target)\n",
-                "X_all = df_all.drop('charges', axis=1)\n",
-                "y = df_all['charges']\n",
+                "X = df.drop('charges', axis=1)\n",
+                "y = df['charges']\n",
                 "\n",
                 "# Split Data (80% Train, 20% Test)\n",
                 "# We use a fixed random_state for reproducibility\n",
-                "X_train_all, X_test_all, y_train, y_test = train_test_split(X_all, y, test_size=0.2, random_state=42)\n",
+                "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
                 "\n",
                 "# Scaling (Crucial for KNN)\n",
                 "# We scale all features to have mean=0 and variance=1\n",
-                "scaler_all = StandardScaler()\n",
-                "X_train_all_scaled = scaler_all.fit_transform(X_train_all)\n",
-                "X_test_all_scaled = scaler_all.transform(X_test_all)"
+                "scaler = StandardScaler()\n",
+                "X_train_scaled = scaler.fit_transform(X_train)\n",
+                "X_test_scaled = scaler.transform(X_test)"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 27,
+            "execution_count": 5,
             "id": "3275c9d9",
             "metadata": {},
             "outputs": [
@@ -290,15 +290,15 @@
                 "# --- Model Training (All Features) ---\n",
                 "\n",
                 "# 1. Linear Regression\n",
-                "lr_all = LinearRegression()\n",
-                "lr_all.fit(X_train_all_scaled, y_train)\n",
-                "y_pred_lr_all = lr_all.predict(X_test_all_scaled)\n",
+                "lr = LinearRegression()\n",
+                "lr.fit(X_train_scaled, y_train)\n",
+                "y_pred_lr = lr.predict(X_test_scaled)\n",
                 "\n",
                 "# 2. KNN Regression\n",
                 "# Using k=5 as a starting point\n",
-                "knn_all = KNeighborsRegressor(n_neighbors=5)\n",
-                "knn_all.fit(X_train_all_scaled, y_train)\n",
-                "y_pred_knn_all = knn_all.predict(X_test_all_scaled)\n",
+                "knn = KNeighborsRegressor(n_neighbors=5)\n",
+                "knn.fit(X_train_scaled, y_train)\n",
+                "y_pred_knn = knn.predict(X_test_scaled)\n",
                 "\n",
                 "# --- Evaluation ---\n",
                 "def print_metrics(model_name, y_true, y_pred):\n",
@@ -311,8 +311,8 @@
                 "    return r2\n",
                 "\n",
                 "print(\"--- PART 1: ALL FEATURES RESULTS ---\\n\")\n",
-                "r2_lr_all = print_metrics(\"Linear Regression (All)\", y_test, y_pred_lr_all)\n",
-                "r2_knn_all = print_metrics(\"KNN (All)\", y_test, y_pred_knn_all)"
+                "r2_lr = print_metrics(\"Linear Regression (All)\", y_test, y_pred_lr)\n",
+                "r2_knn = print_metrics(\"KNN (All)\", y_test, y_pred_knn)"
             ]
         },
         {
@@ -337,7 +337,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 28,
+            "execution_count": 6,
             "id": "a2f63127",
             "metadata": {},
             "outputs": [
@@ -354,7 +354,7 @@
             ],
             "source": [
                 "# Calculate correlation matrix on the encoded dataframe\n",
-                "corr_matrix = df_all.corr()\n",
+                "corr_matrix = df.corr()\n",
                 "\n",
                 "# Plot heatmap\n",
                 "plt.figure(figsize=(12, 10))\n",
@@ -365,7 +365,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 29,
+            "execution_count": 7,
             "id": "e2abe815",
             "metadata": {},
             "outputs": [
@@ -389,7 +389,7 @@
             ],
             "source": [
                 "# Zooming in on correlation with 'charges'\n",
-                "target_corr = df_all.corr()[['charges']].sort_values(by='charges', ascending=False)\n",
+                "target_corr = df.corr()[['charges']].sort_values(by='charges', ascending=False)\n",
                 "print(\"Correlation with Charges:\")\n",
                 "print(target_corr)"
             ]
@@ -437,7 +437,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 30,
+            "execution_count": 8,
             "id": "92cb1f25",
             "metadata": {},
             "outputs": [
@@ -457,7 +457,7 @@
                 "\n",
                 "selected_features = ['age', 'bmi', 'children', 'smoker_yes']\n",
                 "\n",
-                "X_sel = df_all[selected_features]\n",
+                "X_sel = df[selected_features]\n",
                 "# y remains the same\n",
                 "\n",
                 "print(\"Selected Features Shape:\", X_sel.shape)\n",
@@ -466,7 +466,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 31,
+            "execution_count": 9,
             "id": "6a41a470",
             "metadata": {},
             "outputs": [
@@ -533,7 +533,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 32,
+            "execution_count": 10,
             "id": "e392f73a",
             "metadata": {},
             "outputs": [
@@ -564,7 +564,7 @@
                 "results = pd.DataFrame({\n",
                 "    'Model': ['Linear Regression', 'Linear Regression', 'KNN', 'KNN'],\n",
                 "    'Feature Set': ['All Features', 'Selected Features', 'All Features', 'Selected Features'],\n",
-                "    'R2 Score': [r2_lr_all, r2_lr_sel, r2_knn_all, r2_knn_sel]\n",
+                "    'R2 Score': [r2_lr, r2_lr_sel, r2_knn, r2_knn_sel]\n",
                 "})\n",
                 "\n",
                 "print(results)\n",
@@ -590,7 +590,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 33,
+            "execution_count": 11,
             "id": "ec259035",
             "metadata": {},
             "outputs": [
@@ -612,7 +612,7 @@
                 "\n",
                 "# Subplot 1: Linear Regression (All)\n",
                 "plt.subplot(2, 2, 1)\n",
-                "plt.scatter(y_test, y_pred_lr_all, alpha=0.5, color='blue')\n",
+                "plt.scatter(y_test, y_pred_lr, alpha=0.5, color='blue')\n",
                 "plt.plot([y_test.min(), y_test.max()], [y_test.min(), y_test.max()], 'k--', lw=2)\n",
                 "plt.xlabel('Actual')\n",
                 "plt.ylabel('Predicted')\n",
@@ -620,7 +620,7 @@
                 "\n",
                 "# Subplot 2: KNN (All)\n",
                 "plt.subplot(2, 2, 2)\n",
-                "plt.scatter(y_test, y_pred_knn_all, alpha=0.5, color='green')\n",
+                "plt.scatter(y_test, y_pred_knn, alpha=0.5, color='green')\n",
                 "plt.plot([y_test.min(), y_test.max()], [y_test.min(), y_test.max()], 'k--', lw=2)\n",
                 "plt.xlabel('Actual')\n",
                 "plt.ylabel('Predicted')\n",
@@ -664,7 +664,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3",
+            "display_name": "env",
             "language": "python",
             "name": "python3"
         },
@@ -678,7 +678,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.8.5"
+            "version": "3.12.1"
         }
     },
     "nbformat": 4,
