--- a/MINIST/mnist_dataset.ipynb
+++ b/MINIST/mnist_dataset.ipynb
@@ -102,23 +102,23 @@
         "\n",
         "data_path = 'dataset'\n",
         "\n",
-        "X_train_full = load_mnist_images(os.path.join(data_path, 'train-images-idx3-ubyte.gz'))\n",
-        "y_train_full = load_mnist_labels(os.path.join(data_path, 'train-labels-idx1-ubyte.gz'))\n",
-        "X_test_full  = load_mnist_images(os.path.join(data_path, 't10k-images-idx3-ubyte.gz'))\n",
-        "y_test_full  = load_mnist_labels(os.path.join(data_path, 't10k-labels-idx1-ubyte.gz'))\n",
+        "X_train = load_mnist_images(os.path.join(data_path, 'train-images-idx3-ubyte.gz'))\n",
+        "y_train = load_mnist_labels(os.path.join(data_path, 'train-labels-idx1-ubyte.gz'))\n",
+        "X_test  = load_mnist_images(os.path.join(data_path, 't10k-images-idx3-ubyte.gz'))\n",
+        "y_test  = load_mnist_labels(os.path.join(data_path, 't10k-labels-idx1-ubyte.gz'))\n",
         "\n",
-        "print(\"Training data shape:\", X_train_full.shape)\n",
-        "print(\"Training labels shape:\", y_train_full.shape)\n",
-        "print(\"Test data shape:\", X_test_full.shape)\n",
-        "print(\"Test labels shape:\", y_test_full.shape)\n",
+        "print(\"Training data shape:\", X_train.shape)\n",
+        "print(\"Training labels shape:\", y_train.shape)\n",
+        "print(\"Test data shape:\", X_test.shape)\n",
+        "print(\"Test labels shape:\", y_test.shape)\n",
         "\n",
         "# Normalize pixels to 0-1\n",
-        "X_train_full = X_train_full / 255.0\n",
-        "X_test_full  = X_test_full / 255.0\n",
+        "X_train = X_train / 255.0\n",
+        "X_test  = X_test / 255.0\n",
         "\n",
         "# Combine and filter to first 5 classes\n",
-        "X = np.vstack((X_train_full, X_test_full))\n",
-        "y = np.hstack((y_train_full, y_test_full))\n",
+        "X = np.vstack((X_train, X_test))\n",
+        "y = np.hstack((y_train, y_test))\n",
         "mask = y < 5\n",
         "X, y = X[mask], y[mask]\n",
         "\n",
